test/corpus/main.txt
==============================================================================
Task header
==============================================================================
todo: Do stuff
------------------------------------------------------------------------------

(documentation
  (task
    (label)
    (subject
      (word)
      (word))))

==============================================================================
Task header with topics
==============================================================================
todo(topic_1, topic_2): Do stuff
------------------------------------------------------------------------------

(documentation
  (task
    (label)
    (decorations
      (topic)
      (topic))
    (subject
      (word)
      (word))))

==============================================================================
Task header with mentions & topics
==============================================================================
todo(topic_1, @dev_1): Do stuff
------------------------------------------------------------------------------

(documentation
  (task
    (label)
    (decorations
      (topic)
      (mention))
    (subject
      (word)
      (word))))

==============================================================================
Task with with some description
==============================================================================
todo(topic_1, @dev_1): Do stuff

We need to fix `X` before doing a stable release.
We **might** use `Y`'s implementation as it does most of what we want.
------------------------------------------------------------------------------

(documentation
  (task
    (label)
    (decorations
      (topic)
      (mention))
    (subject
      (word)
      (word)))
  (paragraph
    (word)
    (word)
    (word)
    (word)
    (code)
    (word)
    (word)
    (word)
    (word)
    (word)
    (punctuation)
    (word)
    (bold)
    (word)
    (code)
    (punctuation)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (punctuation)))

==============================================================================
Task with with multi-paragraph description
==============================================================================
fix: Fix compatability issues. 

Compatability issues were found in `v0.1.0`.

I have made a compatability fix in this PR that solves this.
------------------------------------------------------------------------------

(documentation
  (task
    (label)
    (subject
      (word)
      (word)
      (word)
      (punctuation)))
  (paragraph
    (word)
    (word)
    (word)
    (word)
    (word)
    (code)
    (punctuation))
  (paragraph
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (word)
    (punctuation)))

==============================================================================
Text styles
==============================================================================
`Inline \` code` *italic* **bold**
------------------------------------------------------------------------------

(documentation
  (paragraph
    (code)
    (italic)
    (bold)))

==============================================================================
Issue references
==============================================================================
See #56. Also OXY2DEV/tree-sitter-doctext#57
------------------------------------------------------------------------------

(documentation
  (paragraph
    (word)
    (issue_reference)
    (punctuation)
    (word)
    (issue_reference)))

==============================================================================
Mention
==============================================================================
This should be done by @OXY2DEV.
------------------------------------------------------------------------------

(documentation
  (paragraph
    (word)
    (word)
    (word)
    (word)
    (word)
    (mention)
    (punctuation)))

==============================================================================
URLs
==============================================================================
Check out https://github.com/OXY2DEV/tree-sitter-doctext
------------------------------------------------------------------------------

(documentation
  (paragraph                                                                            
    (word)
    (word)
    (url)))

